--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -2421,7 +2421,8 @@ body.opened-nav-animate{
       text-transform: uppercase;
       letter-spacing: 0.2em;
       option{
-        padding: 5px 0;
+        padding: 5px 10px;
+        text-align: left;
       }
     }
     input[type="text"]{
