--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -1974,8 +1974,8 @@ body .mCSB_scrollTools {
 .woocommerce div.product .cart .single_add_to_cart_button {
   letter-spacing: 0;
   height: 40px; }
-  .woocommerce-page div.product .cart .single_add_to_cart_button.button,
-  .woocommerce div.product .cart .single_add_to_cart_button.button {
+  .woocommerce-page div.product .cart .single_add_to_cart_button.btn,
+  .woocommerce div.product .cart .single_add_to_cart_button.btn {
     margin-right: 1px;
     float: left;
     border: 2px solid #252525;
