--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -1931,7 +1931,7 @@ body{
 			.single_add_to_cart_button{
               letter-spacing: 0;
               height: 40px;
-              &.button{
+              &.btn{
                 margin-right: 1px;
                 float: left;
                 border: 2px solid $title-text;
