--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -1837,6 +1837,11 @@ body .mCSB_scrollTools {
           -o-opacity: 0.6;
           opacity: 0.6; }
 
+#content div.product div.images,
+#content div.product div.summary {
+  float: none;
+  width: 100%; }
+
 .woocommerce-page div.product.wc-single-product .quantity-group span,
 .woocommerce div.product.wc-single-product .quantity-group span {
   display: block; }
@@ -2159,28 +2164,30 @@ div.swatch-wrapper {
     border-bottom: 1px solid #e5e5e5;
     margin-bottom: 15px; }
 
-.woocommerce-cart .shipping-calculator-form {
+.woocommerce .shipping-calculator-form {
   display: block !important; }
-.woocommerce-cart .wc-proceed-to-checkout {
+.woocommerce .wc-proceed-to-checkout {
   padding: 0;
   margin-bottom: 40px; }
-.woocommerce-cart .cart-collaterals .cart_totals tr th, .woocommerce-cart .cart-collaterals .cart_totals tr td {
+.woocommerce .cart-collaterals .cart_totals tr th, .woocommerce .cart-collaterals .cart_totals tr td {
   border: none;
   font-size: 18px;
   font-weight: 400;
   text-transform: uppercase;
   line-height: 21px;
   color: #252525; }
-.woocommerce-cart .cart-collaterals .cart_totals tr td {
-  letter-spacing: 0.2em; }
-  .woocommerce-cart .cart-collaterals .cart_totals tr td strong {
+.woocommerce .cart-collaterals .cart_totals tr td {
+  letter-spacing: 0.2em;
+  text-transform: none;
+  text-align: right; }
+  .woocommerce .cart-collaterals .cart_totals tr td strong {
     font-weight: 300; }
-  .woocommerce-cart .cart-collaterals .cart_totals tr td label {
+  .woocommerce .cart-collaterals .cart_totals tr td label {
     letter-spacing: 0; }
-  .woocommerce-cart .cart-collaterals .cart_totals tr td #shipping_method li .amount {
+  .woocommerce .cart-collaterals .cart_totals tr td #shipping_method li .amount {
     letter-spacing: 0.2em;
     font-weight: 300; }
-.woocommerce-cart .cart-collaterals .cart_totals tr th {
+.woocommerce .cart-collaterals .cart_totals tr th {
   padding: 12px 30px; }
 
 .woocommerce form.woocommerce-shipping-calculator .form-row {
