--- a/wp-content/themes/wingman/assets/css/queries.css
+++ b/wp-content/themes/wingman/assets/css/queries.css
@@ -88,7 +88,12 @@
   .testimonial-carousel-wrapper .owl-carousel-kt .owl-pagination .owl-page {
     width: 50px;
     height: 50px;
-    margin: 10px 15px; } }
+    margin: 10px 15px; }
+
+  .woocommerce .upsells-products > h3,
+  .woocommerce .related-products > h3,
+  .woocommerce .cross-sells > h3 {
+    font-size: 30px; } }
 @media (max-width: 767px) {
   .main-class.col-md-12 .blog-posts-list .entry-main-content,
   .main-class.col-md-12 .blog-posts-list .list-media-wrapper {
