--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -2709,15 +2709,12 @@ div.swatch-wrapper {
     bottom: 0;
     left: 0;
     top: auto;
-    -webkit-transform: translate(0px, 0px);
-    -khtml-transform: translate(0px, 0px);
-    -moz-transform: translate(0px, 0px);
-    -ms-transform: translate(0px, 0px);
-    -o-transform: translate(0px, 0px);
-    transform: translate(0px, 0px); }
-  .banner.position-bottom .btn {
-    padding-left: 50px;
-    padding-right: 50px; }
+    -webkit-transform: translate(0, 0);
+    -khtml-transform: translate(0, 0);
+    -moz-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    -o-transform: translate(0, 0);
+    transform: translate(0, 0); }
   .banner.position-top .banner-content {
     top: 0;
     left: 0;
@@ -2727,9 +2724,6 @@ div.swatch-wrapper {
     -ms-transform: translate(0px, 0px);
     -o-transform: translate(0px, 0px);
     transform: translate(0px, 0px); }
-  .banner.position-top .btn {
-    padding-left: 50px;
-    padding-right: 50px; }
   .banner.banner-left {
     text-align: left; }
   .banner.banner-right {
