--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -2841,11 +2841,7 @@ div.swatch-wrapper{
       bottom: 0;
       left: 0;
       top: auto;
-      @include transform(translate(0px, 0px));
-    }
-    .btn{
-      padding-left: 50px;
-      padding-right: 50px;
+      @include transform(translate(0, 0));
     }
   }
 
@@ -2854,10 +2850,6 @@ div.swatch-wrapper{
       top: 0;
       left: 0;
       @include transform(translate(0px, 0px));
-    }
-    .btn{
-      padding-left: 50px;
-      padding-right: 50px;
     }
   }
 
