--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -497,7 +497,7 @@
   .woocommerce-error{
     background: $qty_bg;
     border-color: #ea4f21;
-    color: $primary-color;
+    color: red;
   }
   .woocommerce-info,
   .woocommerce-message{
