--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -1942,6 +1942,7 @@ body{
 			.single_add_to_cart_button{
               letter-spacing: 0;
               height: 40px;
+              margin-right: 1px;
               &.btn{
                 margin-right: 1px;
                 float: left;
