--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -4510,7 +4510,12 @@ article.post-item.post-layout-classic {
   &.striped{
     span{
       @include css3-prefix-value('background-image','linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent)');
-      @include background-size('40px','40px');
+      @include background-size('40px 40px');
+    }
+  }
+  &.animated{
+    span{
+      @include animation('progress-bar-stripes 2s linear infinite');
     }
   }
 }
