--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -2458,6 +2458,297 @@ body.opened-nav-animate{
   }
 }
 
+/**
+ * Twitter
+ **/
+.widget_kt_twitter{
+  ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    li{
+      padding: 0 0 20px;
+      &:last-child{
+        padding-bottom: 0;
+      }
+    }
+  }
+  .kt-twitter-wrapper{
+    padding-left: 35px;
+    position: relative;
+    &:before{
+      @include FontAwesome('\f099');
+      position: absolute;
+      top: 3px;
+      left: 0;
+      font-size: 25px;
+    }
+    .kt-twitter-tool{
+      font-style: italic;
+      color: $primary-color;
+      font-size: 12px;
+      span{
+        &:after{
+          content: "/";
+          margin-left: 5px;
+        }
+        &:last-child:after{
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+/*
+ * TABS NAV
+ */
+
+.kt-tabs-nav {
+    margin: 0 0 20px 1px;
+    padding: 0;
+    list-style: none;
+    li{
+      float: left;
+      padding: 0;
+      text-align: center;
+      a{
+        font-size: 14px;
+        font-weight: normal;
+        text-transform: uppercase;
+        display: block;
+        padding: 8px 15px;
+        color: $title-text;
+        margin: 0 0 0 -1px;
+        background-color: $qty_bg;
+        border: 1px solid $border-color;
+      }
+      &.ui-state-active{
+        a{
+          background: $white;
+          border-bottom-color: $white;
+        }
+      }
+    }
+}
+
+/*
+ * Widget Article + Widget Tabs
+ */
+.kt_tabs_content,
+.widget_kt_posts{
+  ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    li{
+      margin-bottom: 20px;
+      &:last-child{
+        margin-bottom: 0;
+      }
+      .entry-thumb{
+        margin-bottom: 15px;
+      }
+      .title{
+        font-size: 14px;
+        line-height: 18px;
+        margin: 0 0 7px;
+        font-family: $font-stack;
+        font-weight: 400;
+        letter-spacing: 0;
+        text-transform: none;
+        a{
+          color: $title-text;
+          &:hover,&:focus{
+            color: $primary-color;
+          }
+        }
+      }
+      .entry-meta-data{
+        font-size: 12px;
+        margin: 0;
+        line-height: 16px;
+        text-transform: none;
+        .posted-on{
+          display: none;
+        }
+      }
+      span.cat-links{
+        margin-bottom: 5px;
+        font-size: 12px;
+        display: block;
+        line-height: normal;
+      }
+    }
+  }
+}
+.kt_tabs_content{
+  ul{
+    &.no-image{
+      li{
+        .article-attr{
+          margin: 0;
+        }
+      }
+    }
+    li{
+      .entry-thumb{
+        float: left;
+        margin: 0;
+        width: 65px;
+        border: 1px solid $border-color;
+      }
+      .article-attr{
+        margin-left: 80px;
+      }
+    }
+  }
+}
+.widget_kt_posts{
+  ul.kt-artilce-1{
+    &.no-image{
+      li{
+        .article-attr{
+          margin: 0;
+        }
+      }
+    }
+    li{
+      .entry-thumb{
+        float: left;
+        margin: 0;
+        width: 65px;
+        border: 1px solid $border-color;
+      }
+      .article-attr{
+        margin-left: 80px;
+      }
+    }
+  }
+}
+.widget_kt_posts{
+  ul.kt-artilce-2{
+    li{
+      margin-bottom: 30px;
+    }
+  }
+}
+.kt_tabs_content{
+  .kt-comment-content{
+    line-height: 1.6;
+  }
+}
+
+.kt_widget_tabs{
+  .kt-tabs-nav{
+    li{
+      width: 33.33%;
+      a{
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
+  }
+}
+
+/*
+ * Widget Flickr
+ */
+.kt_flickr {
+  margin: -5px;
+  a{
+    display: block;
+    width: 33.33%;
+    float: left;
+    padding: 5px;
+    position: relative;
+    img{
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+    &:after{
+      background: $primary-color;
+      content: "";
+      right: 5px;
+      left: 5px;
+      top: 5px;
+      bottom: 5px;
+      position: absolute;
+      @include transition();
+      @include opacity(0);
+    }
+    &:before{
+      color: $white;
+      @include FontAwesome('\f16e');
+      @include translate();
+      z-index: 1; 
+      @include opacity(0);
+    }
+    &:hover{
+      &:before{
+        @include opacity(1);
+      }
+      &:after{
+        @include opacity(0.6);
+      }
+    } 
+  }
+  &.column-4{
+    a{
+      width:25%;
+    }
+  }
+  &.column-2{
+    a{
+      width:50%;
+    }
+  }
+}
+
+/*
+ * About Me
+ */
+.kt-aboutwidget-img{
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.kt-aboutwidget-socials{
+  @include background-opacity(#000,0.3);
+  height: 100%;
+  line-height: 30px;
+  list-style: none;
+  margin: 0;
+  padding: 10px 0 0;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 40px;
+  a{
+    display: block;
+    color: $white;
+    &:hover{
+      color: $primary-color;
+    }
+  }
+}
+
+.kt-aboutwidget-title{
+  margin-bottom: 5px;
+  letter-spacing: 1px;
+  color: $primary-color;
+}
+
+.sidebar{
+  .mailchimp-form.mailchimp-layout-1{
+    input[type="text"],input[type="email"]{
+      border-color: $border-color;
+    }
+  }
+}
+
 /* ==============================
    12. Blog
    ============================== */
@@ -4260,12 +4551,17 @@ article.post-item.post-layout-classic {
 
 
 .social-icons-small{
-  a{
-    font-size: 14px;
-    height: 26px;
-    line-height: 24px;
-    width: 26px;
+  ul{
+    li{
+      a{
+        font-size: 14px;
+        height: 26px;
+        line-height: 24px;
+        width: 26px;
+      }
+    }
   }
+  
 }
 
 .social-icons-small.social-background-empty{
